fixed filter appearance on mobile

--- a/dev/scss/husky100.scss
+++ b/dev/scss/husky100.scss
@@ -899,7 +899,7 @@
     ul#filter {
       margin: 10px 20px 0;
       padding: 0 0 20px;
-
+      height: max-content;
       .udub-slant {
         display: none;
       }
